--- a/style.css
+++ b/style.css
@@ -67,7 +67,14 @@
       transform: translateY(-2px) scale(1.03);
     }
 
-
+    #transitScoreValue {
+      font-size: 2.4em;
+      font-weight: bold;
+      color: #185a9d;
+      align-items: center;
+      margin: 24px 0 12px 0;
+      transition: color 0.3s;
+    } 
 
     #timeDisplay {
       font-size: 1.15rem;
@@ -574,7 +581,7 @@
 
   /* Light shadow for separation */
   box-shadow: inset 0 0 3px rgba(0,0,0,0.15);
-  z-index: 10;
+  z-index: 1000;
 }
 
 .resizer:hover {
@@ -828,7 +835,7 @@
     border-radius: 16px 16px 0 0;
     padding: 12px;
     padding-bottom: calc(var(--ribbon-height) + env(safe-area-inset-bottom) - 10px) !important;
-    max-height: 40vh; /* bottom-sheet height */
+    max-height: 50vh; /* bottom-sheet height */
     overflow-y: visible;
     background: linear-gradient(#ffffff, #f6f9fb);
     box-shadow: 0 -8px 30px rgba(0,0,0,0.18);
@@ -870,6 +877,8 @@
     flex-direction: column;
     transform: translateZ(0);
   }
+
+
 
   #animationCanvas.floating-canvas {
     z-index: 2450;
@@ -914,6 +923,26 @@
     height: 40vh !important; 
   }
 
+  #transitScoreCanvas .canvas-content {
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+  }
+
+  #transitScoreValue {
+    font-size: 2em !important; /* slightly smaller */
+    font-weight: bold;    
+    color: #185a9d;
+    align-items: center;
+    margin: 6px 0 6px 0 !important;
+    transition: color 0.3s;
+  } 
+
+  #transitScoreSub{
+    font-size: 0.9rem !important; /* slightly smaller */
+    margin-top: -6px;
+    margin-bottom: 12px;
+    padding-bottom: 12px;
+  }
 
   #helpCanvas.floating-canvas{
     left: 0 !important;
@@ -933,7 +962,26 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    border: #0000001a 2px solid !important; /* light border */
   }
+
+  #helpCanvas .canvas-content {
+    background: #ddf4d8 !important; /* light grey */    
+  }
+
+  #helpCanvas .canvas-content,
+  #helpCanvas .canvas-content h3,
+  #helpCanvas .canvas-content h4,
+  #helpCanvas .canvas-content ul,
+  #helpCanvas .canvas-content li {
+    font-size: 0.85rem !important;
+  }
+  #helpCanvas .canvas-content ul,
+  #helpCanvas .canvas-content ul li {
+    padding-left: 0 !important;
+    margin-left: 10px !important;     
+  }
+
 
   #graphsCanvas.floating-canvas,  #statsCanvas.floating-canvas {
     left: 0 !important;
@@ -1010,6 +1058,11 @@
     flex-wrap: nowrap;      /* force single line */
     margin-left: 6px;    
   }
+
+  #tripsPerHourAnnotation {
+    font-size: 0.7rem !important; /* smaller text on mobile */
+  }
+
 
   /* keep map visible by giving it bottom padding equal to ribbon + possible open sheet */
   #map { height: calc(100vh - (var(--ribbon-height) + env(safe-area-inset-bottom))); }
