--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ html, body {
     }
 
     .tooltiptext {
+    position: absolute;
     visibility: hidden;
     width: 300px;
     background-color: #222;
@@ -1528,3 +1529,4 @@ html, body, #controls, .canvas-content {
   .headway-help { display: none !important; }
 
 }
+
